--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "simple-react-lightbox": "^3.6.8",
