--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.0.4",
-    "@strapi/plugin-users-permissions": "4.0.4",
+    "@strapi/plugin-graphql": "^4.0.4",
     "@strapi/plugin-i18n": "4.0.4",
-    "mysql": "2.18.1"
+    "@strapi/plugin-users-permissions": "4.0.4",
+    "@strapi/strapi": "4.0.4",
+    "mysql": "2.18.1",
+    "webpack": "^5.66.0"
   },
   "author": {
     "name": "A Strapi developer"
